# pydobe

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
examples/: adding_items_to_project.py  change_project_settings.py  project_set_up.py  working_with_items.py  working_with_layers.py  working_with_projects.py  working_with_scene_files.py
integrations/after_effects/pydobe_panel/: index.html
integrations/after_effects/pydobe_panel/lib/: handleRequests.js  pydobeAEScript.jsx
pydobe/: __init__.py  adobe_objects.py  core.py  utils.py
pydobe/after_effects/: ae_utils.py  data.py
pydobe/after_effects/objects/: ae_objects.py  root.py
pydobe/after_effects/pydobe_ae_panel/CSXS/: manifest.xml
